test to solve heroku pic not showing

--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,7 @@ footer a {
     }
 
     .pic4 {
-        background-image: url('../img/calculator.jpeg');
+        background-image: url('../img/cvfdp.jpeg');
     }
     
     .pic5 {
